cloudflare update + cosmetics: * toastb padding fixes scrollbar on norwegian 403 in firefox * fix text aspect ratio in seekbaron compact toggle * crashpage had link overlaps on homepage

--- a/copyparty/web/ui.css
+++ b/copyparty/web/ui.css
@@ -73,7 +73,7 @@ html {
 #toastb {
 	max-height: 70vh;
 	overflow-y: auto;
-	padding: 1px;
+	padding: .1em;
 }
 #toast.scroll #toastb {
 	overflow-y: scroll;
